--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,18 @@ hp-content {
 hp-presentation {
   display: block;
   background-color: #fff;
-
+  /* these vmins give us a responsive shape */
   width: 80vmin;
   height: 80vmin;
+}
+
+hp-slide {
+  /* inline block doesnt pull down all the html from the margins below */
+  display: inline-block;
+  background-color: #0f0;
+  /* percents of its parent */
+  width: 80%;
+  height: 80%;
+  /* margins to center */
+  margin: 10%;
 }
