--- a/styles/main.css
+++ b/styles/main.css
@@ -4,11 +4,14 @@ html, body {
 }
 
 hp-content {
-  display: block;
+  display: flex;
   background-color: #f00;
 
   width: 100vw;
   height: 100vh;
+
+  justify-content: center;
+  align-items: center;
 }
 
 hp-presentation {
