js to switch slides with guards to prevent otehr devs from messing up my flow

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,9 @@ hp-presentation > hp-slide {
 }
 
 hp-presentation > hp-slide.active {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 hp-presentation {
