--- a/styles/main.css
+++ b/styles/main.css
@@ -65,3 +65,11 @@ hp-chooser * {
   max-width: 20%;
   margin: 5% 2.5%;
 }
+
+hp-chooser.chosen > *.chosen {
+  max-width: 30%;
+}
+
+hp-chooser.chosen > *:not(.chosen) {
+  max-width: 16.6%;
+}
