--- a/styles/main.css
+++ b/styles/main.css
@@ -61,15 +61,38 @@ hp-chooser {
   align-items: center;
 }
 
+hp-chooser.fixed {
+  height: auto;
+}
+
 hp-chooser * {
   /* this wild card styles all the children elements */
   max-width: 20%;
+
   margin: 5% 2.5%;
 }
 
 hp-chooser.chosen > *.chosen {
   max-width: 30%;
+}
 
+hp-chooser.fixed > *.chosen {
+  max-width: 50%;
+
+  animation-name: chosen_fixed;
+  animation-duration: .5s
+}
+
+@keyframes chosen_fixed {
+  from {
+    max-width: 30%;
+  }
+  to {
+    max-width: 50%;
+  }
+}
+
+hp-chooser.chosen.animate > *.chosen {
   animation-name: chosen;
   animation-duration: .5s;
   animation-timing-function: ease;
@@ -79,7 +102,6 @@ hp-chooser.chosen > *.chosen {
   from {
     max-width: 20%;
   }
-
   to {
     max-width: 30%;
   }
@@ -87,10 +109,30 @@ hp-chooser.chosen > *.chosen {
 
 hp-chooser.chosen > *:not(.chosen) {
   max-width: 16.6%;
+  opacity: .25;
+}
 
+hp-chooser.fixed > *:not(.chosen) {
+  max-width: 0%;
+  opacity: .25;
+
+  animation-name: unchosen_fixed;
+  animation-duration: .5s;
+}
+
+@keyframes unchosen_fixed {
+  from {
+    max-width: 16.6%;
+  }
+
+  to {
+    max-width: 0%;
+  }
+}
+
+hp-chooser.chosen.animate > *:not(.chosen) {
   animation-name: unchosen;
   animation-duration: .5s;
-  opacity: .25;
   animation-timing-function: linear;
 }
 
@@ -99,7 +141,6 @@ hp-chooser.chosen > *:not(.chosen) {
     max-width: 20%;
     opacity: 1;
   }
-
   to {
     max-width: 16.6%;
     opacity: .25;
