--- a/styles/main.css
+++ b/styles/main.css
@@ -175,3 +175,18 @@ hp-learn.match img {
 hp-learn-no, hp-learn-yes {
   display: none;
 }
+
+#tfo hp-title {
+  opacity: 0;
+  animation-name: tfo;
+  animation-duration: 2s;
+}
+
+@keyframes tfo {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
