--- a/styles/main.css
+++ b/styles/main.css
@@ -204,3 +204,9 @@ hp-learn-no, hp-learn-yes {
 .hidden {
   display: none;
 }
+
+path {
+  fill: none;
+  stroke: #0f0;
+  stroke-width: 1.5vmin;
+}
